changed bulk upload